Quarkus compiles